--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "service-ibis-hotel",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://NogiR1611.github.io/ibishotel-with-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -15,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
