--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "service-ibis-hotel",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "homepage": "https://NogiR1611.github.io/ibishotel-with-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
