--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "service-ibis-hotel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nogir1611.github.io/ibishotel-with-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
