--- a/CRUD/package.json
+++ b/CRUD/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "path": "^0.12.7",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   }
