--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-js-loading-shimmer": "^1.0.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-shimmer": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
